src/Compilador/Parser/y.output
   0  $accept : programa $end

   1  programa : ID '{' lista_sentencias '}'
   2           | error '{' lista_sentencias '}'
   3           | '{' lista_sentencias '}'
   4           | ID lista_sentencias '}'
   5           | ID '{' lista_sentencias

   6  sentencia : sentencia_declarativa
   7            | sentencia_ejecutable ';'
   8            | sentencia_ejecutable

   9  sentencia_declarativa : declaracion_variable ';'
  10                        | declaracion_variable
  11                        | declaracion_funcion

  12  sentencia_ejecutable : asignacion
  13                       | control
  14                       | llamada_funcion
  15                       | print
  16                       | retorno
  17                       | asignacion_multiple

  18  declaracion_funcion : tipo ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'
  19                      | tipo ID '(' ')' '{' lista_sentencias '}'
  20                      | error ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'
  21                      | tipo ID '(' lista_parametros_formales ')' '{' '}'
  22                      | tipo ID '(' ')' '{' '}'

  23  lista_sentencias : sentencia
  24                   | lista_sentencias sentencia

  25  lista_sentencias_ejecutables : sentencia_ejecutable
  26                               | lista_sentencias_ejecutables sentencia_ejecutable

  27  lista_parametros_formales : parametro_formal
  28                            | lista_parametros_formales ',' parametro_formal
  29                            | lista_parametros_formales error parametro_formal

  30  lista_parametros_reales : parametro_real_compuesto
  31                          | lista_parametros_reales ',' parametro_real_compuesto
  32                          | lista_parametros_reales error parametro_real_compuesto

  33  declaracion_variable : lista_identificadores
  34                       | tipo asignacion
  35                       | error asignacion

  36  lista_identificadores : tipo IDCOMP
  37                        | lista_identificadores ',' IDCOMP
  38                        | ID
  39                        | tipo ID
  40                        | lista_identificadores ',' ID

  41  parametro_formal : CR tipo ID
  42                   | tipo ID
  43                   | LAMBDA tipo ID
  44                   | CR LAMBDA tipo ID

  45  parametro_real_compuesto : parametro_real FLECHA parametro_formal

  46  parametro_real : expresion
  47                 | lambda

  48  control : sentencia_IF
  49          | do_until

  50  sentencia_IF : IF '(' condicion ')' '{' lista_sentencias_ejecutables '}' ENDIF
  51               | IF '(' condicion ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF

  52  condicion : expresion comparador expresion

  53  do_until : DO '{' lista_sentencias_ejecutables '}' UNTIL '(' condicion ')'

  54  comparador : MENORIGUAL
  55             | MAYORIGUAL
  56             | IGUALIGUAL
  57             | DISTINTO
  58             | '>'
  59             | '<'

  60  tipo : LONG
  61       | STRING

  62  asignacion : IDCOMP ASIGNAR expresion
  63             | ID ASIGNAR expresion

  64  expresion : expresion '+' termino
  65            | expresion '-' termino
  66            | termino
  67            | TRUNC '(' expresion ')'

  68  termino : termino '*' factor
  69          | termino '/' factor
  70          | factor

  71  factor : IDCOMP
  72         | CTEL
  73         | CTEF
  74         | llamada_funcion
  75         | ID

  76  llamada_funcion : IDCOMP '(' lista_parametros_reales ')'
  77                  | ID '(' lista_parametros_reales ')'
  78                  | IDCOMP '(' ')'
  79                  | ID '(' ')'

  80  print : PRINT '(' STRING ')'
  81        | PRINT '(' expresion ')'

  82  lambda : '(' tipo ')' '{' lista_sentencias_ejecutables

  83  retorno : RETURN '(' expresion ')'

  84  asignacion_multiple : ids '=' lista_constantes
  85                      | error ids '=' lista_constantes
  86                      | ids '=' error

  87  ids : IDCOMP
  88      | ids ',' IDCOMP

  89  lista_constantes : lista_constantes ',' constante
  90                   | constante

  91  constante : CTEL
  92            | CTEF

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	'{'  shift 3
	.  error

	programa  goto 4


state 1
	programa : error . '{' lista_sentencias '}'  (2)

	'{'  shift 5
	.  error


state 2
	programa : ID . '{' lista_sentencias '}'  (1)
	programa : ID . lista_sentencias '}'  (4)
	programa : ID . '{' lista_sentencias  (5)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	'{'  shift 15
	.  error

	lista_sentencias  goto 16
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 3
	programa : '{' . lista_sentencias '}'  (3)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	.  error

	lista_sentencias  goto 33
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : error '{' . lista_sentencias '}'  (2)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	.  error

	lista_sentencias  goto 34
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 6
	declaracion_funcion : error . ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'  (20)
	declaracion_variable : error . asignacion  (35)
	asignacion_multiple : error . ids '=' lista_constantes  (85)

	ID  shift 35
	IDCOMP  shift 36
	.  error

	asignacion  goto 37
	ids  goto 38


state 7
	lista_identificadores : ID .  (38)
	asignacion : ID . ASIGNAR expresion  (63)
	llamada_funcion : ID . '(' lista_parametros_reales ')'  (77)
	llamada_funcion : ID . '(' ')'  (79)

	ASIGNAR  shift 39
	'('  shift 40
	$end  reduce 38
	error  reduce 38
	ID  reduce 38
	IF  reduce 38
	PRINT  reduce 38
	RETURN  reduce 38
	LONG  reduce 38
	DO  reduce 38
	STRING  reduce 38
	IDCOMP  reduce 38
	'}'  reduce 38
	';'  reduce 38
	','  reduce 38


state 8
	sentencia_IF : IF . '(' condicion ')' '{' lista_sentencias_ejecutables '}' ENDIF  (50)
	sentencia_IF : IF . '(' condicion ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF  (51)

	'('  shift 41
	.  error


state 9
	print : PRINT . '(' STRING ')'  (80)
	print : PRINT . '(' expresion ')'  (81)

	'('  shift 42
	.  error


state 10
	retorno : RETURN . '(' expresion ')'  (83)

	'('  shift 43
	.  error


state 11
	tipo : LONG .  (60)

	.  reduce 60


state 12
	do_until : DO . '{' lista_sentencias_ejecutables '}' UNTIL '(' condicion ')'  (53)

	'{'  shift 44
	.  error


state 13
	tipo : STRING .  (61)

	.  reduce 61


state 14
	asignacion : IDCOMP . ASIGNAR expresion  (62)
	llamada_funcion : IDCOMP . '(' lista_parametros_reales ')'  (76)
	llamada_funcion : IDCOMP . '(' ')'  (78)
	ids : IDCOMP .  (87)

	ASIGNAR  shift 45
	'('  shift 46
	','  reduce 87
	'='  reduce 87


state 15
	programa : ID '{' . lista_sentencias '}'  (1)
	programa : ID '{' . lista_sentencias  (5)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	.  error

	lista_sentencias  goto 47
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 16
	programa : ID lista_sentencias . '}'  (4)
	lista_sentencias : lista_sentencias . sentencia  (24)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	'}'  shift 48
	.  error

	sentencia  goto 49
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 17
	lista_sentencias : sentencia .  (23)

	.  reduce 23


state 18
	sentencia : sentencia_declarativa .  (6)

	.  reduce 6


state 19
	sentencia : sentencia_ejecutable . ';'  (7)
	sentencia : sentencia_ejecutable .  (8)

	';'  shift 50
	$end  reduce 8
	error  reduce 8
	ID  reduce 8
	IF  reduce 8
	PRINT  reduce 8
	RETURN  reduce 8
	LONG  reduce 8
	DO  reduce 8
	STRING  reduce 8
	IDCOMP  reduce 8
	'}'  reduce 8


state 20
	sentencia_declarativa : declaracion_variable . ';'  (9)
	sentencia_declarativa : declaracion_variable .  (10)

	';'  shift 51
	$end  reduce 10
	error  reduce 10
	ID  reduce 10
	IF  reduce 10
	PRINT  reduce 10
	RETURN  reduce 10
	LONG  reduce 10
	DO  reduce 10
	STRING  reduce 10
	IDCOMP  reduce 10
	'}'  reduce 10


state 21
	sentencia_declarativa : declaracion_funcion .  (11)

	.  reduce 11


state 22
	sentencia_ejecutable : asignacion .  (12)

	.  reduce 12


state 23
	sentencia_ejecutable : control .  (13)

	.  reduce 13


state 24
	sentencia_ejecutable : llamada_funcion .  (14)

	.  reduce 14


state 25
	sentencia_ejecutable : print .  (15)

	.  reduce 15


state 26
	sentencia_ejecutable : retorno .  (16)

	.  reduce 16


state 27
	sentencia_ejecutable : asignacion_multiple .  (17)

	.  reduce 17


state 28
	declaracion_funcion : tipo . ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'  (18)
	declaracion_funcion : tipo . ID '(' ')' '{' lista_sentencias '}'  (19)
	declaracion_funcion : tipo . ID '(' lista_parametros_formales ')' '{' '}'  (21)
	declaracion_funcion : tipo . ID '(' ')' '{' '}'  (22)
	declaracion_variable : tipo . asignacion  (34)
	lista_identificadores : tipo . IDCOMP  (36)
	lista_identificadores : tipo . ID  (39)

	ID  shift 52
	IDCOMP  shift 53
	.  error

	asignacion  goto 54


state 29
	declaracion_variable : lista_identificadores .  (33)
	lista_identificadores : lista_identificadores . ',' IDCOMP  (37)
	lista_identificadores : lista_identificadores . ',' ID  (40)

	','  shift 55
	$end  reduce 33
	error  reduce 33
	ID  reduce 33
	IF  reduce 33
	PRINT  reduce 33
	RETURN  reduce 33
	LONG  reduce 33
	DO  reduce 33
	STRING  reduce 33
	IDCOMP  reduce 33
	'}'  reduce 33
	';'  reduce 33


state 30
	control : sentencia_IF .  (48)

	.  reduce 48


state 31
	control : do_until .  (49)

	.  reduce 49


state 32
	asignacion_multiple : ids . '=' lista_constantes  (84)
	asignacion_multiple : ids . '=' error  (86)
	ids : ids . ',' IDCOMP  (88)

	','  shift 56
	'='  shift 57
	.  error


state 33
	programa : '{' lista_sentencias . '}'  (3)
	lista_sentencias : lista_sentencias . sentencia  (24)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	'}'  shift 58
	.  error

	sentencia  goto 49
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 34
	programa : error '{' lista_sentencias . '}'  (2)
	lista_sentencias : lista_sentencias . sentencia  (24)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	'}'  shift 59
	.  error

	sentencia  goto 49
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 35
	declaracion_funcion : error ID . '(' lista_parametros_formales ')' '{' lista_sentencias '}'  (20)
	asignacion : ID . ASIGNAR expresion  (63)

	ASIGNAR  shift 39
	'('  shift 60
	.  error


state 36
	asignacion : IDCOMP . ASIGNAR expresion  (62)
	ids : IDCOMP .  (87)

	ASIGNAR  shift 45
	','  reduce 87
	'='  reduce 87


state 37
	declaracion_variable : error asignacion .  (35)

	.  reduce 35


state 38
	asignacion_multiple : error ids . '=' lista_constantes  (85)
	ids : ids . ',' IDCOMP  (88)

	','  shift 56
	'='  shift 61
	.  error


state 39
	asignacion : ID ASIGNAR . expresion  (63)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	CTEF  shift 65
	IDCOMP  shift 66
	.  error

	llamada_funcion  goto 67
	expresion  goto 68
	termino  goto 69
	factor  goto 70


state 40
	llamada_funcion : ID '(' . lista_parametros_reales ')'  (77)
	llamada_funcion : ID '(' . ')'  (79)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	CTEF  shift 65
	IDCOMP  shift 66
	'('  shift 71
	')'  shift 72
	.  error

	llamada_funcion  goto 67
	lista_parametros_reales  goto 73
	parametro_real_compuesto  goto 74
	parametro_real  goto 75
	expresion  goto 76
	lambda  goto 77
	termino  goto 69
	factor  goto 70


state 41
	sentencia_IF : IF '(' . condicion ')' '{' lista_sentencias_ejecutables '}' ENDIF  (50)
	sentencia_IF : IF '(' . condicion ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF  (51)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	CTEF  shift 65
	IDCOMP  shift 66
	.  error

	llamada_funcion  goto 67
	expresion  goto 78
	condicion  goto 79
	termino  goto 69
	factor  goto 70


state 42
	print : PRINT '(' . STRING ')'  (80)
	print : PRINT '(' . expresion ')'  (81)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	STRING  shift 80
	CTEF  shift 65
	IDCOMP  shift 66
	.  error

	llamada_funcion  goto 67
	expresion  goto 81
	termino  goto 69
	factor  goto 70


state 43
	retorno : RETURN '(' . expresion ')'  (83)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	CTEF  shift 65
	IDCOMP  shift 66
	.  error

	llamada_funcion  goto 67
	expresion  goto 82
	termino  goto 69
	factor  goto 70


state 44
	do_until : DO '{' . lista_sentencias_ejecutables '}' UNTIL '(' condicion ')'  (53)

	error  shift 83
	ID  shift 84
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	DO  shift 12
	IDCOMP  shift 14
	.  error

	sentencia_ejecutable  goto 85
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	lista_sentencias_ejecutables  goto 86
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 45
	asignacion : IDCOMP ASIGNAR . expresion  (62)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	CTEF  shift 65
	IDCOMP  shift 66
	.  error

	llamada_funcion  goto 67
	expresion  goto 87
	termino  goto 69
	factor  goto 70


state 46
	llamada_funcion : IDCOMP '(' . lista_parametros_reales ')'  (76)
	llamada_funcion : IDCOMP '(' . ')'  (78)

	ID  shift 62
	CTEL  shift 63
	TRUNC  shift 64
	CTEF  shift 65
	IDCOMP  shift 66
	'('  shift 71
	')'  shift 88
	.  error

	llamada_funcion  goto 67
	lista_parametros_reales  goto 89
	parametro_real_compuesto  goto 74
	parametro_real  goto 75
	expresion  goto 76
	lambda  goto 77
	termino  goto 69
	factor  goto 70


state 47
	programa : ID '{' lista_sentencias . '}'  (1)
	programa : ID '{' lista_sentencias .  (5)
	lista_sentencias : lista_sentencias . sentencia  (24)

	error  shift 6
	ID  shift 7
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	LONG  shift 11
	DO  shift 12
	STRING  shift 13
	IDCOMP  shift 14
	'}'  shift 90
	$end  reduce 5

	sentencia  goto 49
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	declaracion_variable  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	tipo  goto 28
	lista_identificadores  goto 29
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 48
	programa : ID lista_sentencias '}' .  (4)

	.  reduce 4


state 49
	lista_sentencias : lista_sentencias sentencia .  (24)

	.  reduce 24


state 50
	sentencia : sentencia_ejecutable ';' .  (7)

	.  reduce 7


state 51
	sentencia_declarativa : declaracion_variable ';' .  (9)

	.  reduce 9


state 52
	declaracion_funcion : tipo ID . '(' lista_parametros_formales ')' '{' lista_sentencias '}'  (18)
	declaracion_funcion : tipo ID . '(' ')' '{' lista_sentencias '}'  (19)
	declaracion_funcion : tipo ID . '(' lista_parametros_formales ')' '{' '}'  (21)
	declaracion_funcion : tipo ID . '(' ')' '{' '}'  (22)
	lista_identificadores : tipo ID .  (39)
	asignacion : ID . ASIGNAR expresion  (63)

	ASIGNAR  shift 39
	'('  shift 91
	$end  reduce 39
	error  reduce 39
	ID  reduce 39
	IF  reduce 39
	PRINT  reduce 39
	RETURN  reduce 39
	LONG  reduce 39
	DO  reduce 39
	STRING  reduce 39
	IDCOMP  reduce 39
	'}'  reduce 39
	';'  reduce 39
	','  reduce 39


state 53
	lista_identificadores : tipo IDCOMP .  (36)
	asignacion : IDCOMP . ASIGNAR expresion  (62)

	ASIGNAR  shift 45
	$end  reduce 36
	error  reduce 36
	ID  reduce 36
	IF  reduce 36
	PRINT  reduce 36
	RETURN  reduce 36
	LONG  reduce 36
	DO  reduce 36
	STRING  reduce 36
	IDCOMP  reduce 36
	'}'  reduce 36
	';'  reduce 36
	','  reduce 36


state 54
	declaracion_variable : tipo asignacion .  (34)

	.  reduce 34


state 55
	lista_identificadores : lista_identificadores ',' . IDCOMP  (37)
	lista_identificadores : lista_identificadores ',' . ID  (40)

	ID  shift 92
	IDCOMP  shift 93
	.  error


state 56
	ids : ids ',' . IDCOMP  (88)

	IDCOMP  shift 94
	.  error


state 57
	asignacion_multiple : ids '=' . lista_constantes  (84)
	asignacion_multiple : ids '=' . error  (86)

	error  shift 95
	CTEL  shift 96
	CTEF  shift 97
	.  error

	lista_constantes  goto 98
	constante  goto 99


state 58
	programa : '{' lista_sentencias '}' .  (3)

	.  reduce 3


state 59
	programa : error '{' lista_sentencias '}' .  (2)

	.  reduce 2


state 60
	declaracion_funcion : error ID '(' . lista_parametros_formales ')' '{' lista_sentencias '}'  (20)

	LAMBDA  shift 100
	LONG  shift 11
	CR  shift 101
	STRING  shift 13
	.  error

	tipo  goto 102
	lista_parametros_formales  goto 103
	parametro_formal  goto 104


state 61
	asignacion_multiple : error ids '=' . lista_constantes  (85)

	CTEL  shift 96
	CTEF  shift 97
	.  error

	lista_constantes  goto 105
	constante  goto 99


state 62
	factor : ID .  (75)
	llamada_funcion : ID . '(' lista_parametros_reales ')'  (77)
	llamada_funcion : ID . '(' ')'  (79)

	'('  shift 40
	$end  reduce 75
	error  reduce 75
	ID  reduce 75
	IF  reduce 75
	PRINT  reduce 75
	RETURN  reduce 75
	MENORIGUAL  reduce 75
	MAYORIGUAL  reduce 75
	IGUALIGUAL  reduce 75
	DISTINTO  reduce 75
	FLECHA  reduce 75
	LONG  reduce 75
	DO  reduce 75
	STRING  reduce 75
	IDCOMP  reduce 75
	'}'  reduce 75
	';'  reduce 75
	')'  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75


state 63
	factor : CTEL .  (72)

	.  reduce 72


state 64
	expresion : TRUNC . '(' expresion ')'  (67)

	'('  shift 106
	.  error


state 65
	factor : CTEF .  (73)

	.  reduce 73


state 66
	factor : IDCOMP .  (71)
	llamada_funcion : IDCOMP . '(' lista_parametros_reales ')'  (76)
	llamada_funcion : IDCOMP . '(' ')'  (78)

	'('  shift 46
	$end  reduce 71
	error  reduce 71
	ID  reduce 71
	IF  reduce 71
	PRINT  reduce 71
	RETURN  reduce 71
	MENORIGUAL  reduce 71
	MAYORIGUAL  reduce 71
	IGUALIGUAL  reduce 71
	DISTINTO  reduce 71
	FLECHA  reduce 71
	LONG  reduce 71
	DO  reduce 71
	STRING  reduce 71
	IDCOMP  reduce 71
	'}'  reduce 71
	';'  reduce 71
	')'  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71


state 67
	factor : llamada_funcion .  (74)

	.  reduce 74


state 68
	asignacion : ID ASIGNAR expresion .  (63)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 107
	'-'  shift 108
	$end  reduce 63
	error  reduce 63
	ID  reduce 63
	IF  reduce 63
	PRINT  reduce 63
	RETURN  reduce 63
	FLECHA  reduce 63
	LONG  reduce 63
	DO  reduce 63
	STRING  reduce 63
	IDCOMP  reduce 63
	'}'  reduce 63
	';'  reduce 63


state 69
	expresion : termino .  (66)
	termino : termino . '*' factor  (68)
	termino : termino . '/' factor  (69)

	'*'  shift 109
	'/'  shift 110
	$end  reduce 66
	error  reduce 66
	ID  reduce 66
	IF  reduce 66
	PRINT  reduce 66
	RETURN  reduce 66
	MENORIGUAL  reduce 66
	MAYORIGUAL  reduce 66
	IGUALIGUAL  reduce 66
	DISTINTO  reduce 66
	FLECHA  reduce 66
	LONG  reduce 66
	DO  reduce 66
	STRING  reduce 66
	IDCOMP  reduce 66
	'}'  reduce 66
	';'  reduce 66
	')'  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66


state 70
	termino : factor .  (70)

	.  reduce 70


state 71
	lambda : '(' . tipo ')' '{' lista_sentencias_ejecutables  (82)

	LONG  shift 11
	STRING  shift 13
	.  error

	tipo  goto 111


state 72
	llamada_funcion : ID '(' ')' .  (79)

	.  reduce 79


state 73
	lista_parametros_reales : lista_parametros_reales . ',' parametro_real_compuesto  (31)
	lista_parametros_reales : lista_parametros_reales . error parametro_real_compuesto  (32)
	llamada_funcion : ID '(' lista_parametros_reales . ')'  (77)

	error  shift 112
	')'  shift 113
	','  shift 114
	.  error


state 74
	lista_parametros_reales : parametro_real_compuesto .  (30)

	.  reduce 30


state 75
	parametro_real_compuesto : parametro_real . FLECHA parametro_formal  (45)

	FLECHA  shift 115
	.  error


state 76
	parametro_real : expresion .  (46)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 107
	'-'  shift 108
	FLECHA  reduce 46


state 77
	parametro_real : lambda .  (47)

	.  reduce 47


state 78
	condicion : expresion . comparador expresion  (52)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	MENORIGUAL  shift 116
	MAYORIGUAL  shift 117
	IGUALIGUAL  shift 118
	DISTINTO  shift 119
	'>'  shift 120
	'<'  shift 121
	'+'  shift 107
	'-'  shift 108
	.  error

	comparador  goto 122


state 79
	sentencia_IF : IF '(' condicion . ')' '{' lista_sentencias_ejecutables '}' ENDIF  (50)
	sentencia_IF : IF '(' condicion . ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF  (51)

	')'  shift 123
	.  error


state 80
	print : PRINT '(' STRING . ')'  (80)

	')'  shift 124
	.  error


state 81
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	print : PRINT '(' expresion . ')'  (81)

	')'  shift 125
	'+'  shift 107
	'-'  shift 108
	.  error


state 82
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	retorno : RETURN '(' expresion . ')'  (83)

	')'  shift 126
	'+'  shift 107
	'-'  shift 108
	.  error


state 83
	asignacion_multiple : error . ids '=' lista_constantes  (85)

	IDCOMP  shift 127
	.  error

	ids  goto 38


state 84
	asignacion : ID . ASIGNAR expresion  (63)
	llamada_funcion : ID . '(' lista_parametros_reales ')'  (77)
	llamada_funcion : ID . '(' ')'  (79)

	ASIGNAR  shift 39
	'('  shift 40
	.  error


state 85
	lista_sentencias_ejecutables : sentencia_ejecutable .  (25)

	.  reduce 25


state 86
	lista_sentencias_ejecutables : lista_sentencias_ejecutables . sentencia_ejecutable  (26)
	do_until : DO '{' lista_sentencias_ejecutables . '}' UNTIL '(' condicion ')'  (53)

	error  shift 83
	ID  shift 84
	IF  shift 8
	PRINT  shift 9
	RETURN  shift 10
	DO  shift 12
	IDCOMP  shift 14
	'}'  shift 128
	.  error

	sentencia_ejecutable  goto 129
	asignacion  goto 22
	control  goto 23
	llamada_funcion  goto 24
	print  goto 25
	retorno  goto 26
	asignacion_multiple  goto 27
	sentencia_IF  goto 30
	do_until  goto 31
	ids  goto 32


state 87
	asignacion : IDCOMP ASIGNAR expresion .  (62)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 107
	'-'  shift 108
	$end  reduce 62
	error  reduce 62
	ID  reduce 62
	IF  reduce 62
	PRINT  reduce 62
	RETURN  reduce 62
	FLECHA  reduce 62
	LONG  reduce 62
	DO  reduce 62
	STRING  reduce 62
	IDCOMP  reduce 62
	'}'  reduce 62
	';'  reduce 62


state 88
	llamada_funcion : IDCOMP '(' ')' .  (78)

	.  reduce 78


state 89
	lista_parametros_reales : lista_parametros_reales . ',' parametro_real_compuesto  (31)
	lista_parametros_reales : lista_parametros_reales . error parametro_real_compuesto  (32)
	llamada_funcion : IDCOMP '(' lista_parametros_reales . ')'  (76)

	error  shift 112
	')'  shift 130
	','  shift 114
	.  error


state 90
	programa : ID '{' lista_sentencias '}' .  (1)

	.  reduce 1


state 91
	declaracion_funcion : tipo ID '(' . lista_parametros_formales ')' '{' lista_sentencias '}'  (18)
	declaracion_funcion : tipo ID '(' . ')' '{' lista_sentencias '}'  (19)
	declaracion_funcion : tipo ID '(' . lista_parametros_formales ')' '{' '}'  (21)
	declaracion_funcion : tipo ID '(' . ')' '{' '}'  (22)

	LAMBDA  shift 100
	LONG  shift 11
	CR  shift 101
	STRING  shift 13
	')'  shift 131
	.  error

	tipo  goto 102
	lista_parametros_formales  goto 132
	parametro_formal  goto 104


state 92
	lista_identificadores : lista_identificadores ',' ID .  (40)

	.  reduce 40


state 93
	lista_identificadores : lista_identificadores ',' IDCOMP .  (37)

	.  reduce 37


state 94
	ids : ids ',' IDCOMP .  (88)

	.  reduce 88


state 95
	asignacion_multiple : ids '=' error .  (86)

	.  reduce 86


state 96
	constante : CTEL .  (91)

	.  reduce 91


state 97
	constante : CTEF .  (92)

	.  reduce 92


state 98
	asignacion_multiple : ids '=' lista_constantes .  (84)
	lista_constantes : lista_constantes . ',' constante  (89)

	','  shift 133
	$end  reduce 84
	error  reduce 84
	ID  reduce 84
	IF  reduce 84
	PRINT  reduce 84
	RETURN  reduce 84
	FLECHA  reduce 84
	LONG  reduce 84
	DO  reduce 84
	STRING  reduce 84
	IDCOMP  reduce 84
	'}'  reduce 84
	';'  reduce 84


state 99
	lista_constantes : constante .  (90)

	.  reduce 90


state 100
	parametro_formal : LAMBDA . tipo ID  (43)

	LONG  shift 11
	STRING  shift 13
	.  error

	tipo  goto 134


state 101
	parametro_formal : CR . tipo ID  (41)
	parametro_formal : CR . LAMBDA tipo ID  (44)

	LAMBDA  shift 135
	LONG  shift 11
	STRING  shift 13
	.  error

	tipo  goto 136


state 102
	parametro_formal : tipo . ID  (42)

	ID  shift 137
	.  error


state 103
	declaracion_funcion : error ID '(' lista_parametros_formales . ')' '{' lista_sentencias '}'  (20)
	lista_parametros_formales : lista_parametros_formales . ',' parametro_formal  (28)
	lista_parametros_formales : lista_parametros_formales . error parametro_formal  (29)
